# Beanstalk

./: .env.example  .gitignore  .gitlab-ci.yml  API.md  DEPLOYMENT.md  Dockerfile  Dockerfile-celery.production  Dockerfile.production  Dockerfile.test  FEATURES.md  IMPLEMENTATION_SUMMARY.md  README.md  auto_commit.sh  auto_commits.sh  auto_commits1.sh  cronjobs  data.csv  docker-compose.production-api.yml  docker-compose.production-api.yml.old  docker-compose.production-api.yml.save  docker-compose.production-cron.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.development.sh  docker-entrypoint.production-api.sh  docker-entrypoint.production-cron.sh  firebase-admin-sdk.example.json  google_sheets_crawler.example.json  manage.py  package-lock.json  package.json  pyproject.toml  requiremnts.md  seed.sh  setup-env.sh  start.sh  tasks.py  wait_for_db_ready.py
.devcontainer/: devcontainer.json.example
.vscode.example/: launch.json  settings.json
api/: apps.py  celery.py  decorators.py  enums.py  pagination.py  permissions.py  signals.py  tasks.py  testing_overrides.py  validators.py
beanstalk/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
dexterz-timer/: .gitignore  README.md  SETUP.md  package-lock.json  package.json
documentation/: deployment.md  virtual_environment.md
lf_service/: __init__.py  category.py  models.py  user.py  util.py
nginx_configs_production/: api.conf
nginx_configs_staging/: api.conf
spools/: apps.py
templates/: confirm_email.html  confirm_email.txt  nofity_about_new_reports.html  otp_outgoing_message.txt  (+8 more)
(+449 files in other folders)
